test/conformance/chainsaw/validating-policies/exceptions/cel-validation/valid-v1beta1.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: PolicyException
metadata:
  name: valid-exception
spec:
  policyRefs:
  - name: test-policy
    kind: ValidatingPolicy
  matchConditions:
  - name: valid-condition
    expression: object.metadata.name == 'allowed-pod'
